test/fail/import/brace_at_end.lly
#[
SyntaxError: '}' outside of a block.
    from brace_at_end.lly:6:
]#

}
